2009-09-11  Lin Ma  <Lin.Ma@Sun.COM>

	* daemon/nwam-enm-item.c (nwam_enm_item_class_init),
	(nwam_enm_item_init), (nwam_enm_item_finalize),
	(on_nwam_enm_toggled), (on_nwam_enm_notify),
	(nwam_enm_item_set_enm):
	* daemon/nwam-env-item.c (nwam_env_item_class_init),
	(nwam_env_item_init), (nwam_env_item_finalize),
	(on_nwam_env_toggled), (on_nwam_env_notify):
	* daemon/nwam-menuitem.h:
	* daemon/nwam-ncu-item.c (nwam_ncu_item_class_init),
	(nwam_ncu_item_init), (nwam_ncu_item_finalize),
	(on_nwam_ncu_toggled), (on_nwam_ncu_notify):
	* daemon/nwam-tooltip-widget.c
	(nwam_object_tooltip_widget_class_init), (nwam_ncu_notify):
	* daemon/nwam-wifi-item.c (nwam_wifi_item_class_init),
	(nwam_wifi_item_init), (nwam_wifi_item_finalize), (is_wifi_active),
	(on_nwam_wifi_toggled), (wifi_net_notify):
	Fixed 11305 Click the active menuitem will remove the toggle flag
	Fixed some build warnings.

2009-09-10  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_wifi_net.c, common/nwamui_wifi_net.h,
	  daemon/nwam-wifi-item.c: 
	  Fix defect#11157 differently by setting the menu widget's (parent
	  class) AtkObject's description property to be a descriptive string.

2009-09-10  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_daemon.c: 
	  Refactor the initialisation of objects in the daemon to better
	  support restart of NWAM daemon. Populationg of the lists of objects
	  has been separated out to a function that can be called on first
	  init and on restarts of nwamd. Tries to reuse objects if they
	  already exist and handle add/removes that occurred while nwam was
	  down.
	* capplet/nwam_net_conf_panel.c: 
	  Reduce indentation in conf panel to 24. After speakinig with Calum
	  40 just looks too much.
	* common/libnwamui.c: 
	  Add comment to default_log_handler as placeholder of how to fire
	  assertion on critical errors if using --debug.
	* common/nwamui_ncu.c, common/nwamui_ncu.h:
	  Add SCANNING state for ncus, and status strings.
	* daemon/status_icon.c: 